package amphipolis.model;

/**
 * Represents the Coder (Programmer) character card.
 * Ability: Allows the player to reserve an area to draw extra tiles in the next turn.
 */
public class Coder extends Character {

    @Override
    public void useAbility(Board board, Player player) {
        //TODO: IMPLEMENT IT
    }
}