package amphipolis.model;

public enum Color {
    RED, GREEN, BLUE, YELLOW, BROWN, PURPLE
}