package amphipolis.model;

/**
 * Represents the Digger character card.
 * Ability: The player takes up to 2 tiles from the SAME area they drew from earlier.
 */
public class Digger extends Character {

    @Override
    public void useAbility(Board board, Player player) {
        // TODO: IMPLEMENT IT
    }
}