package amphipolis.model;

/**
 * Represents the Professor character card.
 * Ability: The player takes 1 tile from every area (Mosaic, Statue, Skeleton, Amphora),
 * excluding the area they already visited this turn.
 */
public class Professor extends Character {

    @Override
    public void useAbility(Board board, Player player) {
    // TODO: IMPLEMENT IT
    }
}