package amphipolis.model;

public enum SkeletonPart {
    UPPER, LOWER
}