package amphipolis.model;

public enum SkeletonType {
    BIG, SMALL
}